@@ -20,15 +20,17 @@ public class UserRepository {
         users.add(new User("U2", "karl", "Karl Marx"));
         users.add(new User("U3", "alessa", "Alessa Bradley"));
         users.add(new User("U4", "lauren", "Lauren Jones"));
-        users.add(new User("U5", "nils", "Nils"));
+        users.add(new User("U5", "nils", "Nils", true));
     }
 
     public List<User> findUsersWithId(String[] ids) {
-        final List<String> idList = Arrays.asList(ids);
+      final List<String> idList = Arrays.asList(ids);
 
-        return this.users.stream().filter(
-            u -> idList.contains(u.getId())
-        ).collect(Collectors.toList());
+      return idList.stream()
+        .map(userId -> this.users.stream()
+          .filter(u -> userId.equals(u.getId()))
+          .findFirst().orElse(null))
+        .toList();
     }
 
     public User findUserWithLogin(String login) {
